--- a/source/css/_objects.text.scss
+++ b/source/css/_objects.text.scss
@@ -23,7 +23,7 @@
 @mixin u-font--primary-nav() {
   font-family: $ff-font--primary;
   font-size: rem(18);
-  line-height: 1;
+  line-height: 1.4;
 }
 
 .u-font--primary-nav {
